# pg2_1

./: .gitignore  .gitmodules  CMakeLists.txt  bookings.json  bookingsPraktikum4.json  bookingsPraktikum5.json  config.json  devenv.nix  new.json  shell.nix
src/: BinaryFormatReader.h  Booking.cpp  Booking.h  TravelAgency.cpp  TravelAgency.h  easyKey.cpp  easyKey.h  main.cpp
src/backend/: BinaryFormatReader.cpp  Booking.cpp  Booking.h  BookingController.cpp  BookingController.h  ChangeController.cpp  ChangeController.h  Check.cpp  Check.h  CheckConfiguration.cpp  CheckConfiguration.h  Customer.cpp  Customer.h  Travel.cpp  Travel.h  TravelAgency.cpp  TravelAgency.h
src/backend/booking/: Booking.cpp  Booking.h  BookingCodec.cpp  BookingCodec.h  FlightBooking.cpp  FlightBooking.h  HotelBooking.cpp  HotelBooking.h  RentalCarReservation.cpp  RentalCarReservation.h  TrainTicket.cpp  TrainTicket.h
src/backend/coord/: Airport.cpp  Airport.h  Position.h
src/backend/digraph/: Graph.h  algorithm.h
src/geojson/: GeoJsonElement.h  GeoJsonLine.cpp  GeoJsonLine.h  GeoJsonPin.cpp  GeoJsonPin.h  IntoGeoJsonElements.h  geojsonview.cpp  geojsonview.h
src/serde/: Codec.h  Json.cpp  Json.h  Primitives.cpp  Primitives.h  Structures.h  Validation.cpp  Validation.h  prelude.h
src/ui/: checkresultui.cpp  checkresultui.h  checkresultui.ui  checksettings.cpp  checksettings.h  checksettings.ui  flightbookingui.cpp  flightbookingui.h  flightbookingui.ui  hotelbookingui.cpp  hotelbookingui.h  hotelbookingui.ui  rentalcarreservationui.cpp  rentalcarreservationui.h  rentalcarreservationui.ui  trainticketui.cpp  trainticketui.h  trainticketui.ui  travelagencyui.cpp  travelagencyui.h  travelagencyui.ui
